--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 .pydevproject
 .project
 .settings
+/__pycache__
+/test_news_item.py
+/test_news_list_bernama.py
+/test_news_list_borneo_post.py
+/test_news_list_freemalaysiatoday.py
+/test_news_list_ipohecho.py
+/test_news_list_malaysia_chronicle.py
+/test_news_list_malaysiakini.py
+/test_news_list_mmail.py
+/test_news_list_mysinchew.py
+/test_news_list_nst.py
+/test_news_list_selangorku.py
+/test_news_list_selangortimes.py
+/test_news_list_themalaysiantimes.py
+/test_news_list_theselangortimes.py
+/test_news_list_thestar.py
+/test_news_list_thesundaily.py
+/test_news_list_tmi.py
+/test_news_list_utusan.py
+/test_news_source.py
+/test_news_strip.py
+/test_news.py
+/theStar.log
